# cast

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Taskfile.yml  cast-mcp-client.json  cast-mcp.json  cast.json  flake.nix  ocx.json  opencode.json  review-consultant-gemini.md
assets/: Dockerfile.dev  Dockerfile.dev.opencode  Dockerfile.dev.pi  Dockerfile.nix-daemon  Dockerfile.pi.dev
crates/cast/: Cargo.toml
crates/cast-mcp-client/: Cargo.toml
crates/cast-mcp-client/docs/: README.md  config.md  script-generation.md  usage.md
crates/cast-mcp-client/src/: config.rs  lib.rs  main.rs  server_map.rs
crates/cast-mcp-client/src/client/: handler.rs  mcp_client.rs  mod.rs
crates/cast-mcp-client/src/commands/: call.rs  cli.rs  describe.rs  generate.rs  list.rs  mod.rs  status.rs
crates/cast-mcp-client/src/config/: loader.rs  mod.rs  schema.rs
crates/cast-mcp-client/src/generate/: mod.rs  params.rs  script.rs
crates/cast-mcp-client/tests/: mcp_client_test.rs
crates/cast/assets/: Dockerfile.dev.claudecode  Dockerfile.dev.opencode  Dockerfile.dev.pi
crates/cast/docs/: README.md  agents.md  concepts.md  getting-started.md
crates/cast/docs/commands/: reference.md
crates/cast/docs/config/: approval.md  env-overrides.md  overview.md  reference.md
crates/cast/docs/mcp/: client.md  configuration.md  overview.md
crates/cast/docs/nix/: daemon.md  flake-integration.md  overview.md
crates/cast/src/: lib.rs  logging.rs  paths.rs  xdg.rs
crates/cast/src/commands/: cli.rs  config.rs  mcp.rs  mod.rs  nix_daemon.rs  port.rs
crates/cast/src/commands/mcp/: docs.rs  exec.rs  handler.rs  mod.rs
crates/cast/src/config/: approval.rs  diff.rs  loader.rs  mod.rs  schema.rs
crates/cast/src/dev/: agent.rs  build.rs  build_command.rs  container_name.rs  exec.rs  image.rs  mod.rs  run.rs  shadow_mounts.rs  shell.rs  volumes.rs  workspace.rs
crates/cast/src/dev/claudecode/: config_dir.rs  env.rs  mod.rs
crates/cast/src/dev/opencode/: env.rs  mod.rs
crates/cast/src/dev/pi/: config_dir.rs  mod.rs
crates/cast/src/dev/version/: fetcher.rs  resolver.rs
crates/cast/src/docker/: client.rs  mod.rs
crates/cast/src/mcp/: exec.rs  handler.rs  mod.rs  server.rs
crates/cast/src/nix_daemon/: daemon.rs
crates/cast/src/user/: mod.rs
crates/cast/tests/: cli_test.rs  config_test.rs  mcp_client_test.rs
dev/: context.json
docs/: README.md  quick-start.md
feat-config-diff/: context.json
master/: context.json
(+223 files in other folders)
