[package]
name = "cast-mcp-client"
version = "0.1.0"
edition = "2024"
description = "Lightweight MCP client for cast"
authors = ["palekiwi"]

[dependencies]
anyhow = "1.0.102"
http = "1.4.1"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.13.3", features = ["json"] }
rmcp = { version = "1.6.0", features = ["client", "transport-streamable-http-client", "transport-streamable-http-client-reqwest"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
tempfile = "3"
tokio-util = "0.7.18"
axum = "0.8.9"
rmcp = { version = "1.6.0", features = ["server", "transport-streamable-http-server"] }
